# tauri-maximized-fullscreen

./: Cargo.toml  README.md  Tauri.toml
.github/workflows/: build.yml
src/: main.rs
web/: index.html
